--- a/template/index_employee.html
+++ b/template/index_employee.html
@@ -1,3 +1,4 @@
 <h1>hello employee</h1>
 <a class="nav-link" href="{% url 'users:logout' %}">logout</a>
 
+<a class="nav-link" href="{% url 'users:news' %}"> NEWS</a>
